# fashionmnist-residual-cnn

./: .gitignore  LICENSE  README.md  datasets.py  eval.py  model.py  pyproject.toml  train.py  utils.py
