[project]
name = "fashionmnist-residual-cnn"
version = "0.1.0"
description = " MLP, CNN and Residual CNN comparison on FashionMNIST with a clean PyTorch training pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"torch",
	"torchvision",
	"numpy",
	"matplotlib",
	"scikit-learn",
	"tqdm",
]
